# 8z

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  STATUS.md  build.rs
.github/workflows/: bench.yml  ci.yml  docs.yml  publish.yml
benches/: archive_read.rs  archive_write.rs  container_parse.rs
benches/common/: mod.rs
corpora/: Makefile  README.md  SHA256SUMS
corpora/fixtures/archives/: aes_lzma2.7z  bcj2_lzma.7z  bcj_x86.7z  bzip2_default.7z  copy_only.7z  copy_only_64k.7z  deflate64_default.7z  deflate_default.7z  delta_distance1.7z  lzma2_default.7z  lzma_default.7z  ppmd_default.7z
docs/: 7z_FORMAT_NOTES.md  ARCHITECTURE.md  HARD_WON_LESSONS.md  ITERATION_LOOP.md
scripts/: bench_compare.py  checkout_siblings.sh  install_7zz.sh  pre-commit  pre-push  status.sh
src/: analyze.rs  cli.rs  container.rs  error.rs  lib.rs  main.rs  pipeline.rs  read.rs  write.rs
src/container/: coders.rs  crc.rs  folders.rs  header.rs  mod.rs  properties.rs  signature_header.rs  streams.rs
src/pipeline/: aes_folder.rs  bcj.rs  bcj2_folder.rs  bzip2.rs  coder_trait.rs  copy.rs  deflate.rs  deflate64.rs  delta.rs  dispatch.rs  lzma.rs  lzma2.rs  mod.rs  ppmd.rs
src/tests/: copy_round_trip.rs  fixtures.rs  layer0_generators.rs  layer1_container.rs  layer2_dispatch.rs  layer3_per_coder.rs  layer4_pipeline.rs  layer5_cross.rs  layer6_threads.rs  layer7_perf.rs  mod.rs  oracle.rs  oracle_copy.rs  utils.rs
