[workspace]
members = ["."]
resolver = "2"

[package]
name = "sevenzippy"
version = "0.0.1"
edition = "2021"
description = "Pure-Rust 7z archive implementation. Umbrella over the zippy family of codec crates."
license = "Zlib"
repository = "https://github.com/JackDanger/7zippy"
authors = ["Jack Danger Canty"]
build = "build.rs"
default-run = "7zippy"

[lib]
name = "sevenzippy"
path = "src/lib.rs"

[[bin]]
name = "7zippy"
path = "src/main.rs"

[dependencies]
thiserror = "1"
crc32fast = "1"

# Codec sub-crates (feature-gated).
lazippy    = { version = "0.0.1", optional = true }
pippyzippy = { version = "0.0.1", optional = true }
bzippy2    = { version = "0.0.1", optional = true }
# BCJ filters use the lzma-rust2 filter module (same backend as lazippy uses for LZMA).
# Phase 1: in-tree BCJ coder backed by lzma_rust2::filter::bcj. No separate jumpzippy
# sub-crate is needed for Phase 1.
lzma-rust2  = { version = "0.16", features = ["encoder"], optional = true }
lazippier   = { version = "0.0.1", optional = true }
# gzippy 0.5 does not yet expose raw-deflate primitives (its public API only
# produces gzip-framed output); using flate2 directly for Phase 1 Deflate
# support until upstream adds a raw-deflate API.
# See: https://github.com/JackDanger/gzippy/issues/91
flate2      = { version = "1",                              optional = true }
# Deflate64: 64 KiB sliding-window variant of Deflate (decode-only).
# No good Rust encoder exists; Phase 1 ships decode only.
deflate64   = { version = "0.1",                            optional = true }
jumpzippier = { version = "0.0.1", optional = true }
lockzippy   = { version = "0.0.1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["lzma", "lzma2", "deflate", "deflate64", "bzip2", "delta", "ppmd", "bcj", "bcj2", "aes"]
lzma      = ["dep:lazippy"]
deflate   = ["dep:flate2"]
deflate64 = ["dep:deflate64"]  # in-tree; decode-only (no Rust encoder exists for Phase 1)
bzip2     = ["dep:bzippy2"]
delta     = []  # in-tree implementation; no sub-crate dependency
ppmd      = ["dep:pippyzippy"]
bcj       = ["dep:lzma-rust2"]  # BCJ filters via lzma-rust2 filter module (Phase 1)
lzma2     = ["dep:lazippier"]
bcj2      = ["dep:jumpzippier", "lzma"]  # BCJ2 4-stream filter; requires LZMA for inner stream
aes       = ["dep:lockzippy"]           # AES-256-CBC decryption (decode-only in Phase 1)

[profile.release]
lto           = "fat"
codegen-units = 1
opt-level     = 3
strip         = true

[[bench]]
name = "archive_read"
harness = false

[[bench]]
name = "archive_write"
harness = false

[[bench]]
name = "container_parse"
harness = false
