[workspace]
members = ["."]
resolver = "2"

[package]
name = "sevenzippy"
version = "0.0.1"
edition = "2021"
description = "Pure-Rust 7z archive implementation. Umbrella over the zippy family of codec crates."
license = "Zlib"
repository = "https://github.com/JackDanger/7zippy"
authors = ["Jack Danger Canty"]
build = "build.rs"
default-run = "7zippy"

[lib]
name = "sevenzippy"
path = "src/lib.rs"

[[bin]]
name = "7zippy"
path = "src/main.rs"

[dependencies]
thiserror = "1"
crc32fast = "1"

# Codec sub-crates (feature-gated).
lazippy    = { version = "0.0.1", path = "../lazippy",    optional = true }
pippyzippy = { version = "0.0.1", path = "../pippyzippy", optional = true }
bzippy2    = { version = "0.0.1", path = "../bzippy2",    optional = true }
# BCJ filters via jumpzippy sub-crate (wraps lzma-rust2 BCJ backend in Phase 1).
jumpzippy   = { version = "0.0.1", path = "../jumpzippy",  optional = true }
lazippier   = { version = "0.0.1", path = "../lazippier",   optional = true }
# gzippy 0.8 exposes raw-deflate primitives (deflate_encode/deflate_decode),
# Deflate64 decode (decompress_deflate64), and Deflate64 encode
# (compress_deflate64). Both the deflate and deflate64 features activate this
# single crate; Cargo deduplicates the dependency.
gzippy      = { version = "0.8",                            optional = true }
jumpzippier = { version = "0.0.2", path = "../jumpzippier", optional = true }
deltazippy  = { version = "0.0.1", path = "../deltazippy",  optional = true }
lockzippy   = { version = "0.0.2", path = "../lockzippy",   optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["lzma", "lzma2", "deflate", "deflate64", "bzip2", "delta", "ppmd", "bcj", "bcj2", "aes"]
lzma      = ["dep:lazippy"]
deflate   = ["dep:gzippy"]
deflate64 = ["dep:gzippy"]     # encode + decode via gzippy 0.8
bzip2     = ["dep:bzippy2"]
delta     = ["dep:deltazippy"]  # Delta filter via deltazippy sub-crate
ppmd      = ["dep:pippyzippy"]
bcj       = ["dep:jumpzippy"]   # BCJ filters via jumpzippy sub-crate
lzma2     = ["dep:lazippier"]
bcj2      = ["dep:jumpzippier", "lzma"]  # BCJ2 4-stream filter; requires LZMA for inner stream
aes       = ["dep:lockzippy"]           # AES-256-CBC decrypt + encrypt (Phase 1)

[profile.release]
lto           = "fat"
codegen-units = 1
opt-level     = 3
strip         = true

[[bench]]
name = "archive_read"
harness = false

[[bench]]
name = "archive_write"
harness = false

[[bench]]
name = "container_parse"
harness = false
